--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.pkl.* filter=lfs diff=lfs merge=lfs -text
 dataset/*.pkl filter=lfs diff=lfs merge=lfs -text
+dataset/*.bin filter=lfs diff=lfs merge=lfs -text
